name:                cardano-ntp
version:             0.0.1
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20

Library
  exposed-modules:      Ntp.Client
                        Ntp.Util
                        Ntp.Packet

  build-depends:        aeson
                      , aeson-options
                      , async
                      , base
                      , binary >= 0.8
                      , bytestring
                      , formatting
                      , network
--                      , network-transport
--                      , network-transport-tcp
                      , stm
                      , text
                      , these
                      , time
                      , time-units
--                      , universum

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror -fwarn-redundant-constraints
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        MonadFailDesugaring

-- test-suite cardano-ntp-test
--  main-is:             Test.hs
--  other-modules:       Spec
--                       Test.NtpSpec
--  type:                exitcode-stdio-1.0
--  build-depends:       async
--                     , base >= 4.8 && < 5
--                     , binary
--                     , bytestring >= 0.10.8
--                     , cardano-sl-networking
--                     , cardano-sl-util
--                     , containers >= 0.5.7
--                     , hspec >= 2.1.10
--                     , hspec-core
--                     , lens >= 4.14
--                     , mtl >= 2.2.1
--                     , network-transport
--                     , network-transport-tcp
--                     , network-transport-inmemory
--                     , QuickCheck
--                     , random
--                     , serokell-util >= 0.1.2.3
--                     , stm
--                     , time-units
--  build-tool-depends: hspec-discover:hspec-discover
--  hs-source-dirs:      test
--  default-language:    Haskell2010
--  ghc-options:         -threaded
--                       -rtsopts
--                       -Wall
--                       -with-rtsopts=-N
--  default-extensions:  OverloadedStrings
--                     , DeriveDataTypeable
--                     , GeneralizedNewtypeDeriving
--                     , MonadFailDesugaring
