name:                ouroboros-chain
version:             0.1.0.0
synopsis:            Chain-related definitions shared between the network and consensus layer
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2019 Input Output (Hong Kong) Ltd.
author:              IOHK Engineering Team
maintainer:
category:            Network
build-type:          Simple
cabal-version:       >=1.10

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network

library
  hs-source-dirs:      src
  exposed-modules:
                       Ouroboros.Chain.AnchoredFragment
                       Ouroboros.Chain.ChainFragment
                       Ouroboros.Chain.ChainUpdate
                       Ouroboros.Chain.HasFullHeader
                       Ouroboros.Chain.HasHeader
                       Ouroboros.Chain.Magic
                       Ouroboros.Chain.MaxSlotNo
                       Ouroboros.Chain.MockChain
                       Ouroboros.Chain.MockChain.ProducerState
                       Ouroboros.Chain.Point
                       Ouroboros.Chain.Serialised
                       Ouroboros.Chain.Size
                       Ouroboros.Chain.Tip
                       Ouroboros.Chain.Util
                       Ouroboros.Chain.Util.ShowProxy
                       Ouroboros.Chain.Util.ShowQuery

  default-language:    Haskell2010
  build-depends:       base              >=4.9   && <4.15
                     , base16-bytestring
                     , bytestring        >=0.10  && <0.11
                     , cborg             >=0.2.1 && <0.3
                     , containers        >=0.5   && <0.7
                     , nothunks
                     , serialise         >=0.2   && <0.3

                     , cardano-prelude
                     , cardano-slotting

  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
  if flag(asserts)
    ghc-options:       -fno-ignore-asserts
