cabal-version:      3.0
name:               ouroboros-consensus-byron-test
version:            0.4.0.0
license:            Apache-2.0
license-file:       LICENSE NOTICE
copyright:          2020-2023 Input Output Global Inc (IOG)
maintainer:         operations@iohk.io
author:             IOHK Engineering Team
synopsis:           Test infrastructure for Byron
description:        Test infrastructure for Byron.
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ouroboros-network

library
    exposed-modules:
        Ouroboros.Consensus.ByronDual.Ledger
        Ouroboros.Consensus.ByronDual.Node
        Ouroboros.Consensus.ByronDual.Node.Serialisation
        Test.Consensus.Byron.Examples
        Test.Consensus.Byron.Generators
        Test.ThreadNet.Infra.Byron
        Test.ThreadNet.Infra.Byron.Genesis
        Test.ThreadNet.Infra.Byron.ProtocolInfo
        Test.ThreadNet.Infra.Byron.TrackUpdates
        Test.ThreadNet.TxGen.Byron

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -Wunused-packages
        -fno-ignore-asserts

    build-depends:
        base >=4.14 && <4.17,
        bytestring >=0.10 && <0.12,
        cardano-crypto-class,
        cardano-crypto-test,
        cardano-crypto-wrapper,
        cardano-ledger-binary:{cardano-ledger-binary, testlib},
        cardano-ledger-byron,
        cardano-ledger-byron-test,
        containers >=0.5 && <0.7,
        hedgehog-quickcheck,
        mtl >=2.2 && <2.3,
        QuickCheck,
        serialise >=0.2 && <0.3,
        byron-spec-ledger,
        ouroboros-network-api,
        ouroboros-consensus ^>=0.3,
        ouroboros-consensus-test ^>=0.3,
        ouroboros-consensus-byron ==0.4.0.0,
        ouroboros-consensus-byronspec ==0.4.0.0

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Consensus.Byron.Golden
        Test.Consensus.Byron.Serialisation
        Test.ThreadNet.Byron
        Test.ThreadNet.DualByron

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -Wunused-packages
        -fno-ignore-asserts -threaded -rtsopts

    build-depends:
        base >=4.14 && <4.17,
        binary-search,
        bytestring,
        cardano-crypto-class,
        cardano-crypto-wrapper,
        cardano-ledger-binary,
        cardano-ledger-byron,
        cardano-ledger-byron-test,
        cborg,
        containers,
        filepath,
        hedgehog-quickcheck,
        mtl,
        QuickCheck,
        tasty,
        tasty-quickcheck,
        byron-spec-chain,
        byron-spec-ledger,
        small-steps,
        small-steps-test,
        ouroboros-network-mock,
        ouroboros-consensus ^>=0.3,
        ouroboros-consensus-test ^>=0.3,
        ouroboros-consensus-byron ==0.4.0.0,
        ouroboros-consensus-byronspec ==0.4.0.0,
        ouroboros-consensus-byron-test
